--- a/pom.xml
+++ b/pom.xml
@@ -1018,7 +1018,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-profile-domain</artifactId>
-			<version>27-SNAPSHOT</version>
+			<version>27</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
