--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<!-- <junit.version>4.11</junit.version> -->
 		<spring-version>3.2.3.RELEASE</spring-version>
 		<dependency.scope>compile</dependency.scope>
+		 <spring-security.version>5.1.8.RELEASE</spring-security.version>
 		<snapshot-version>-SNAPSHOT</snapshot-version>
 	</properties>
 	<profiles>
@@ -1147,7 +1148,34 @@
 			<version>2.15.0</version>
 			<scope>test</scope>		
 		</dependency>
-			
+				<dependency>
+	    <groupId>org.springframework.ws</groupId>
+	    <artifactId>spring-ws-test</artifactId>
+	    <version>2.0.2.RELEASE</version>
+	    <scope>test</scope>
+	</dependency>  
+	<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+            
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>            
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
 				
 	</dependencies>
 </project>
