--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -35,7 +35,7 @@ D0009=Sharyland Utilities
 ######For enabling/disabling Utility logger############
 utility.logging=true
 
-#TODO: Add DE Company Code
+#TODO: DE: Add DE Company Code
 
 0121=Reliant
 0271=Green Mountain
@@ -45,7 +45,7 @@ utility.logging=true
 0586=XM
 
 
-#TODO: Add URL for DE New Occupant Confirmation
+#TODO: DE: Add URL for DE New Occupant Confirmation
 
 url.new.occupant.confirmation.form.reliant=https://www.reliant.com/en/residential/customer-care/new_occupant_confirmation.jsp
 url.new.occupant.confirmation.form.gme=https://signup.greenmountain.com/en_US/images/GME%20-%20New%20Occupant%20Conf%20Form%20EN_web.pdf
